# src/users/user.route.ts
@@ -1,11 +1,13 @@
 import { Router } from 'express'
 import asyncWrap from 'express-async-wrapper'
+import authenticate from '../common/middleware/authenticate'
 import { UserController } from './user.controller'
 
 const userController = new UserController()
-const router: Router = Router()
+const router:Router = Router()
 
-router.put('/update-profile', asyncWrap(userController.updateProfile))
-router.get('/get-profile', asyncWrap(userController.getProfile))
+router.put('/update-profile', authenticate, asyncWrap(userController.updateProfile))
+router.get('/get-profile', authenticate, asyncWrap(userController.getProfile))
+router.get('/get-profile/:id', authenticate, asyncWrap(userController.getProfileById))
 
 export const userRoutes: Router = router
